[gd_scene load_steps=4 format=3 uid="uid://dme5wkw7sr0fa"]

[ext_resource type="Script" path="res://Scripts/Main_Scene.gd" id="1_sccov"]
[ext_resource type="Theme" uid="uid://87scm464s00h" path="res://Assets/Title_Theme.tres" id="2_6d4bl"]
[ext_resource type="Theme" uid="uid://cp3y0a08cy576" path="res://Scenes/Button.tres" id="3_813yl"]

[node name="Main Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sccov")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.164706, 0.278431, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -209.0
offset_right = 152.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_6d4bl")
theme_override_font_sizes/font_size = 90
text = "P4sswrd4r"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 80

[node name="Passwords" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_813yl")
text = "Passwords"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_813yl")
text = "Settings"

[node name="Logout" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_813yl")
text = "Logout"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_813yl")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Passwords" to="." method="_on_passwords_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
